--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,10 @@ main, div#container {
 			border-color: red;
 		}
 
+button {
+	padding: 5px;
+}
+
 footer {
 	text-align: center;
 	padding: 20px;
