Sets the anchors color to blue

--- a/css/style.css
+++ b/css/style.css
@@ -54,13 +54,14 @@ button {
 	padding: 5px;
 }
 
+a {
+	color: blue;
+}
+
 footer {
 	text-align: center;
 	padding: 20px;
 }
-	footer a {
-		color: blue;
-	}
 
 @-webkit-keyframes move {
 	0% {background-position: 0px 0px, 0 0, 0 0}
