--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,21 @@ main, div#container {
 		height: 10px;
 		margin: 10px 0;
 		border-radius: 20px;
+		background: #555;
+		border: none;
 	}
+		progress::-moz-progress-bar {
+			border-radius: 50px;
+			box-shadow: inset 0 1px 1px 0 rgba(255, 255, 255, 0.4);  
+			background-size: 30px 30px;
+			background-image: linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
+		}
+
 		progress::-webkit-progress-bar {
 			background: #555;
 			border-radius: 20px;
 		}
+
 		progress::-webkit-progress-value {
 			border-radius: 50px;
 			box-shadow: inset 0 1px 1px 0 rgba(255, 255, 255, 0.4);  
