--- a/css/style.css
+++ b/css/style.css
@@ -70,21 +70,25 @@ a {
 
 .module {
 	padding-left: 20px;
+	position: relative;
 }
 	.moduleName {
-		background: linear-gradient(to right, rgba(0,0,0,1) 0%,rgba(255,255,255,0) 100%);
 		color: white;
-		padding: 10px 0 10px 0;
-		border-radius: 5px;
-		max-width: 50%;
 	}
+		.moduleName-bg {
+			background: linear-gradient(to right, rgba(0,0,0,1) 0%,rgba(255,255,255,0) 100%);
+			padding: 10px 0 10px 0;
+			border-radius: 5px;
+			max-width: 30em;
+			height: 22px;
+		}
 		.moduleCheckBoxContainer {
 			display: block;
 			position: relative;
 			padding-left: 50px;
 			margin-bottom: 12px;
 			cursor: pointer;
-			font-size: 22px;
+			font-size: 20px;
 			-webkit-user-select: none;
 			-moz-user-select: none;
 			-ms-user-select: none;
