--- a/css/style.css
+++ b/css/style.css
@@ -95,11 +95,7 @@ a {
 			user-select: none;
 		}
 			.moduleCheckBoxContainer input {
-				position: absolute;
-				opacity: 0;
-				cursor: pointer;
-				height: 0;
-				width: 0;
+				display: none;
 			}
 			
 			.checkmark {
